<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
	<string name="app_name">TubeRun</string>
	<string name="search_settings_description">Departures, Journey Planning</string>
	<string name="search_hint">Enter station or bus stop code</string>
	<string name="search_hint_plan">Enter station, postcode, address or POI</string>
	<string name="status_title">Status</string>
	<string name="departures_title">Departures</string>
	<string name="nearby_title">Nearby</string>
	<string name="maps_title">Map</string>
	<string name="claims_title">Refund Claims</string>
	<string name="planner_title">Journey Planner</string>
	<string name="favorites_title">Favourites</string>
	<string name="oyster_title">Oyster Balance</string>
	<string name="show_weekend">Show Weekend</string>
	<string name="show_now">Show Now</string>
	
	<string name="current_location">My current location</string>
	
	<string name="departtimelater_button">Departure</string>
	<string name="arrivetime_button">Arrival</string>

	<string-array name="ticket_type_spinner">
		<item>Oyster Card</item>
		<item>TfL Travelcard</item>
		<item>National Rail Travelcard</item>
	</string-array>
	<string-array name="oyster_card_type_spinner">
		<item>Adult</item>
		<item>Child</item>
		<item>Student</item>
	</string-array>
	<string-array name="oyster_ticket_type_spinner">
		<item>Annual</item>
		<item>Monthly</item>
		<item>7 day</item>
		<item>Pre pay</item>
		<item>Annual + pre pay</item>
		<item>Monthly + pre pay</item>
		<item>7 day + pre pay</item>
		<item>Other period</item>
		<item>Other period + pre pay</item>
	</string-array>
	<string-array name="tfl_duration_spinner">
		<item>1 day</item>
		<item>Other period</item>
	</string-array>
	<string-array name="rail_duration_spinner">
		<item>Annual</item>
		<item>Monthly</item>
		<item>7 day</item>
		<item>1 day</item>
		<item>Other period</item>
	</string-array>
	<string-array name="claim_title_spinner">
		<item>Mr</item>
		<item>Mrs</item>
		<item>Ms</item>
		<item>Miss</item>
	</string-array>
	
</resources>