<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:id="@+id/menu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/black"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    style="@android:style/TextAppearance.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="48dip"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Menu" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dip"
                    android:layout_gravity="bottom"
                    android:background="@drawable/tuberun_red_bright" />

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:shrinkColumns="1"
                    android:stretchColumns="1" >

                    <TableRow
                        android:id="@+id/status_row"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@layout/transparent_button" >

                        <Button
                            style="@style/StatusesButton"
                            android:layout_width="40dip"
                            android:layout_height="40dip"
                            android:layout_gravity="center_vertical"
                            android:text="" />

                        <TextView
                            style="@android:style/TextAppearance.Large"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dip"
                            android:text="@string/status_title" />
                    </TableRow>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/holo_divider" />

                    <TableRow
                        android:id="@+id/departures_row"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@layout/transparent_button" >

                        <Button
                            style="@style/DeparturesButton"
                            android:layout_width="40dip"
                            android:layout_height="40dip"
                            android:layout_gravity="center_vertical"
                            android:text="" />

                        <TextView
                            style="@android:style/TextAppearance.Large"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dip"
                            android:text="@string/departures_title" />
                    </TableRow>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/holo_divider" />

                    <TableRow
                        android:id="@+id/nearby_row"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@layout/transparent_button" >

                        <Button
                            style="@style/NearbyButton"
                            android:layout_width="40dip"
                            android:layout_height="40dip"
                            android:layout_gravity="center_vertical"
                            android:text="" />

                        <TextView
                            style="@android:style/TextAppearance.Large"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dip"
                            android:text="@string/nearby_title" />
                    </TableRow>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/holo_divider" />

                    <TableRow
                        android:id="@+id/map_row"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@layout/transparent_button" >

                        <Button
                            style="@style/MapIconButton"
                            android:layout_width="40dip"
                            android:layout_height="40dip"
                            android:layout_gravity="center_vertical"
                            android:text="" />

                        <TextView
                            style="@android:style/TextAppearance.Large"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dip"
                            android:text="@string/maps_title" />
                    </TableRow>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/holo_divider" />

                    <TableRow
                        android:id="@+id/planner_row"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@layout/transparent_button" >

                        <Button
                            style="@style/PlanButton"
                            android:layout_width="40dip"
                            android:layout_height="40dip"
                            android:layout_gravity="center_vertical"
                            android:text="" />

                        <TextView
                            style="@android:style/TextAppearance.Large"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dip"
                            android:text="@string/planner_title" />
                    </TableRow>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/holo_divider" />

                    <TableRow
                        android:id="@+id/claims_row"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@layout/transparent_button" >

                        <Button
                            style="@style/ClaimsButton"
                            android:layout_width="40dip"
                            android:layout_height="40dip"
                            android:layout_gravity="center_vertical"
                            android:text="" />

                        <TextView
                            style="@android:style/TextAppearance.Large"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dip"
                            android:text="@string/claims_title" />
                    </TableRow>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/holo_divider" />

                    <TableRow
                        android:id="@+id/oyster_row"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@layout/transparent_button" >

                        <Button
                            style="@style/OysterButtonActive"
                            android:layout_width="40dip"
                            android:layout_height="40dip"
                            android:layout_gravity="center_vertical"
                            android:text="" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="horizontal" >

                            <TextView
                                style="@android:style/TextAppearance.Large"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="8dip"
                                android:text="@string/oyster_title" />

                            <LinearLayout
                                android:id="@+id/layout_balance"
                                android:layout_width="wrap_content"
                                android:layout_height="35dip"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="8dip"
                                android:background="@drawable/bubble_right"
                                android:orientation="horizontal" >

                                <ProgressBar
                                    android:id="@+id/progressbar_balance"
                                    style="@android:style/Widget.ProgressBar.Small"
                                    android:layout_width="30dip"
                                    android:layout_height="30dip"
                                    android:layout_gravity="center"
                                    android:padding="5dip" />

                                <TextView
                                    android:id="@+id/view_balance"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:paddingLeft="5dip"
                                    android:paddingRight="5dip"
                                    android:textAppearance="?android:attr/textAppearanceLarge"
                                    android:textColor="#00a1f5"
                                    android:visibility="gone" />
                            </LinearLayout>
                        </LinearLayout>
                    </TableRow>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/holo_divider" />

                    <TableRow
                        android:id="@+id/favorites_row"
                        android:background="@layout/transparent_button" >

                        <Button
                            style="@style/FavoriteButton"
                            android:layout_width="40dip"
                            android:layout_height="40dip"
                            android:layout_gravity="center_vertical"
                            android:text="" />

                        <TextView
                            style="@android:style/TextAppearance.Large"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dip"
                            android:text="@string/favorites_title" />
                    </TableRow>
                </TableLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="15dip" >
                    <CheckBox 
                        android:layout_width="30dip"
                        android:layout_height="30dip"
                        android:textOn=""
                        android:textOff=""/>
                    <TextView
                            style="@android:style/TextAppearance.Small"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="12dip"
                            android:text="Show this section by default" />
                    
                    
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="2dip"
                android:layout_height="fill_parent"
                android:layout_gravity="right"
                android:background="@drawable/tuberun_red_bright" />
        </LinearLayout>
    </ScrollView>

</merge>